Fix bug where horizontal scroll bar was not functioning properly

--- a/frontend/src/app/features/board-page/board/board.component.scss
+++ b/frontend/src/app/features/board-page/board/board.component.scss
@@ -1,10 +1,12 @@
 @import '../../../assets/styles/main.scss';
 
+$gap-between-lists : 1.5rem;
+
 .board-page-wrapper {
   position: relative;
-  width: 100%;
+  width: min-content;
   height: 100%;
-  overflow: hidden; /* Hide any overflowing content */
+  overflow-y: hidden; /* Hide any overflowing content */
 
   /* Fix the background gradient */
   background-attachment: fixed;
@@ -19,10 +21,10 @@
   display: flex;
   flex-direction: row;
   flex-shrink: 0;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: $gap-between-lists;
+  padding-right: $gap-between-lists;
   padding-top: 12.5rem;
-  gap: 2rem;
+  gap: $gap-between-lists;
   background: none;
 }
 
@@ -80,7 +82,7 @@
   border-radius: 8px;
   display: flex;
   flex-direction: column;
-  margin-right : -2rem;
+  margin-right : -$gap-between-lists
 }
 
 .add-list-button {
